get product swagger
