# pkg/handler/product.go
@@ -47,15 +47,17 @@ func (h *Handler) createProduct(c *gin.Context) {
 	request.Price = userObj.Price
 	request.Color = userObj.Color
 	request.Count = userObj.Count
+
 	request.Sizes = sizes
 	request.ImageUrl = "assets/images/" + userObj.Image.Filename
-
 	fmt.Println(request)
+
 	data, err := h.services.Product.CreateProduct(request)
 	if err != nil {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
 	}
+	fmt.Println(data)
 
 	c.JSON(http.StatusCreated, map[string]interface{}{
 		"data":    data,
@@ -65,12 +67,23 @@ func (h *Handler) createProduct(c *gin.Context) {
 
 }
 
+// @Summary Get Product By Id
+// @Tags products
+// @Description get product by given id
+// @ID get-product-by-id
+// @Produce  json
+// @Param id path string true "product id"
+// @Success 200 {integer} models.Product
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /product/{id} [get]
 func (h *Handler) getProductById(c *gin.Context) {
 	var id int
 
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		newErrorResponse(c, http.StatusBadRequest, "invalid list id param")
+		newErrorResponse(c, http.StatusBadRequest, "invalid product id")
 		return
 	}
 
@@ -87,24 +100,40 @@ func (h *Handler) getProductById(c *gin.Context) {
 	})
 }
 
+// @Summary Get All Products
+// @Tags products
+// @Description get all products
+// @ID get-all-products
+// @Accept  json
+// @Produce  json
+// @Param search query string false "search"
+// @Param limit query string false "limit"
+// @Param offset query string false "offset"
+// @Success 200 {object} []models.Product
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /product [get]
 func (h *Handler) getAllProducts(c *gin.Context) {
 
 	search := c.Query("search")
 
 	offset, err := h.parseOffsetQueryParam(c)
 	if err != nil {
-
 		newErrorResponse(c, http.StatusBadRequest, err.Error())
 		return
-
 	}
 
 	limit, err := h.parseLimitQueryParam(c)
 	if err != nil {
 		newErrorResponse(c, http.StatusBadRequest, err.Error())
 		return
-
 	}
+	fmt.Println(models.QueryParams{
+		Search: search,
+		Limit:  limit,
+		Offset: offset,
+	}, search, limit, offset)
 
 	data, err := h.services.Product.GetAllProducts(models.QueryParams{
 		Search: search,
